variables.Variables.scala.error
Compilation error:
Variables:5: error: value ++ is not a member of Int
  steps++;
       ^Variables:9: error: not found: value pickupBuggle
pickupBuggle();
^Variables:12: error: value -- is not a member of Int
  steps--;
       ^Variables:16: error: not found: value dropBuggle
dropBuggle(); 
^