variables.Variables.scala.code

var steps:Int = 0;

while(!isOverBaggle()) {
  steps++;
  forward();
}

pickupBuggle();

while (steps > 0) {
  steps--;
  backward();
}

dropBuggle();